testsuite/poke.pkl/arrays-index-diag-4.pk
/* { dg-do compile } */

[1,2,3][
    "foo"  /* { dg-error "invalid index.*\n.*expected integral" } */
     ];
